src/test/deca/context/invalid/provided/invalid_int.deca

{int x = 2;
int x = 5;
int y = readfloat();
}

/*  Commentaire  */
